2001-10-09  Christoph Pfisterer  <cp@chrisp.de>

	* SelfUpdate.pm (check): Suppress inject.pl's user info message.

2001-10-07  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (get_tarball): Handle the new SourceRename and
	Source#Rename fields.
	(fetch_source): Use get_tarball and fetch_url_to_file to handle
	on-the-fly renaming. Disabled verbose error messages, failures are
	handled by fetch_url_to_file. Added tries parameter (passed on to
	fetch_url_to_file).
	(phase_unpack): Offer re-downloading when unpacking fails. Let tar
	handle gzip-compressed files to catch more errors (the shell pipe
	apparently only returns the last command's error code).

2001-10-05  Christoph Pfisterer  <cp@chrisp.de>

	* NetAccess.pm: Major overhaul. New function fetch_url_to_file
	allows a target file name to be specified. fetch_url calls through
	to the new function. mirror: URL's are handled
	transparently. After obvious failures fetch_url_to_file offers the
	user to retry the same server or a randomly chosen mirror.
	* Services.pm (expand_url): Removed mirror expansion code.
	* PkgVersion.pm (fetch_source): Don't use expand_url, this is now
	handled transparently by fetch_url.

2001-10-04  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (cmd_scanpackages): Make sure the directory we're
	scanning does exist.

2001-09-27  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_patch): New fields UpdateConfigGuessInDirs
	and UpdateLibtoolInDirs to copy the replacement files directly
	into a list of subdirectories.

2001-09-21  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_install): Create a small README for bundle
	packages - dpkg doesn't like empty packages.

2001-09-17  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: More protection against unexpected white space.

	* Services.pm (collapse_space): New function to collapse all white
	space in a string into a single space. Useful to eliminate
	newlines in fields that shouldn't have any.
