@@ -1,5 +1,8 @@
 2001-10-09  Christoph Pfisterer  <cp@chrisp.de>
 
+	* Services.pm (version_cmp): Changed the version comparison to
+	match that of dpkg exactly.
+
 	* SelfUpdate.pm (check): Suppress inject.pl's user info message.
 
 2001-10-07  Christoph Pfisterer  <cp@chrisp.de>
